<resources>
    <string name="app_name">QuizQuotient</string>
    <string name="password">Password</string>
    <string name="UserName">User Name</string>
    <string name="email">EmailId</string>
    <string name="phone">Phone Number</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="RequestOtp">Request OTP</string>
    <string name="SendOTP">Confirm OTP</string>
    <string name="HintOTP">Enter the OTP</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="invalidPhone">Invalid Phone Number</string>
    <string name="invalidOTP">Invalid OTP</string>
    <string name="Menu1">Category</string>
    <string name="Menu2">Ranking</string>
    <string name="Category">Category</string>
    <string name="Fragment">Blank</string>
    <string name="Play">Play</string>
    <string name="Playtext">0</string>
    <string name="PlayQuestion">1/30</string>
    <string name="AnsA">Answer A</string>
    <string name="AnsB">Answer B</string>
    <string name="AnsC">Answer C</string>
    <string name="AnsD">Answer D</string>
<string name="DoneScore">Score : 0</string>
    <string name="Pass">Passed :0/30</string>
    <string name="TryAgain">Try Again</string>
</resources>
