<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.sayandeep.quizquotient.Acitivities.Done">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGroup"
        android:paddingTop="10dp"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">



    <TextView
        android:id="@+id/txtTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="30sp"
        android:text="@string/DoneScore" />

    <TextView
        android:id="@+id/txtTotalQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:text="@string/Pass" />

    <ProgressBar
        android:id="@+id/doneProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/btnTryAgain"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/TryAgain"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

</RelativeLayout>
