<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.sayandeep.quizquotient.Acitivities.PlayingActivity">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
    android:id="@+id/question_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAnswerA"
                android:text="@string/AnsA"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:foreground="?android:selectableItemBackground"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAnswerB"
                android:text="@string/AnsB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:foreground="?android:selectableItemBackground"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAnswerC"
                android:text="@string/AnsC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:foreground="?android:selectableItemBackground"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAnswerD"
                android:text="@string/AnsD"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:foreground="?android:selectableItemBackground"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:text="@string/Playtext"
                android:textSize="36sp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/txtScore"
                android:background="#000"
                />

            <TextView
                android:id="@+id/txtQuestionNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="#000"
                android:text="@string/PlayQuestion"
                android:textColor="#fff"
                android:textSize="36sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:max="5" />
        </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
